my change to hi

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <header>
-            <h1>Sample Header</h1>
+            <h1>Sample Header hi</h1>
         </header>
 
         <div>
