making more changes

--- a/index.html
+++ b/index.html
@@ -2,16 +2,22 @@
 <html lang="en-us">
 
     <head>
-        <title>My HTML Boilerplate</title>
+        <title>My First Website/title>
     </head>
 
     <body>
         <header>
-            <h1>Sample Header hi</h1>
+            <h1>Welcome to my Website</h1>
         </header>
 
         <div>
 
+                <ul>
+                    <li>This</li>
+                    <li>Site</li>
+                    <li>is Under</li>
+                    <li>Construction</li>
+                </ul>
             <section>
 
             </section>
