making more changes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 
     <head>
-        <title>My First Website/title>
+        <title>My First Website</title>
     </head>
 
     <body>
